[project]
name = "infra-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "habbis", email = "habbis@habbestad.org" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "psycopg[binary]>=3.2.7",
    "python-dotenv>=1.1.0",
]

[project.scripts]
roadstead-api = "roadstead_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
